# TM4C129_CMake

./: CMakeLists.txt  README.md  toolchain.cmake
board/: TM4C1294NCPDT.ccxml  openocd_tm4c1294.cfg  startup_gcc.c
src/: blinky.c
utils/: deploy.sh  gdb_startup_tm4c129.gdb  menu.sh
